// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paragraph /> default render 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_size_regular mfui-paragraph_color_freshAsphalt mfui-paragraph_has-margin"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> it renders Paragraph with props 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_size_small mfui-paragraph_align_right mfui-paragraph_color_purple test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> testing align props 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_size_small mfui-paragraph_align_center mfui-paragraph_color_purple test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> testing align props 2`] = `
<p
  className="mfui-paragraph mfui-paragraph_size_small mfui-paragraph_align_right mfui-paragraph_color_purple test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> testing color props 1`] = `
<p
  className="mfui-paragraph mfui-paragraph_size_small mfui-paragraph_align_right mfui-paragraph_color_green test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> testing color props 2`] = `
<p
  className="mfui-paragraph mfui-paragraph_size_small mfui-paragraph_align_right mfui-paragraph_color_base test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> testing color props 3`] = `
<p
  className="mfui-paragraph mfui-paragraph_size_small mfui-paragraph_align_right mfui-paragraph_color_spbSky0 test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> testing color props 4`] = `
<p
  className="mfui-paragraph mfui-paragraph_size_small mfui-paragraph_align_right mfui-paragraph_color_spbSky1 test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> testing color props 5`] = `
<p
  className="mfui-paragraph mfui-paragraph_size_small mfui-paragraph_align_right mfui-paragraph_color_spbSky2 test"
>
  Test paragraph text
</p>
`;

exports[`<Paragraph /> testing color props 6`] = `
<p
  className="mfui-paragraph mfui-paragraph_size_small mfui-paragraph_align_right mfui-paragraph_color_content test"
>
  Test paragraph text
</p>
`;
